--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/reservation",
+    "build": "vite build --base=/reservation/",
     "preview": "vite preview"
   },
   "dependencies": {
     "pinia": "^2.0.28",
+    "qrcode.vue": "^3.3.3",
     "simple-vue-camera": "^1.1.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
